# player-track

./: README.md  docker-compose.yml
api_server/: .env  Cargo.toml  Dockerfile  Rocket.toml  wait-for-it.sh
api_server/src/: main.rs
web/: Dockerfile  next.config.js  package.json  server.js
web/pages/: index.tsx
