[package]
name = "api_server"
version = "0.1.0"
authors = ["Ben Crevis <bcrevis@gmail.com>"]

[dependencies]
rocket = "0.4.6"
diesel = { version = "1.4.5", features = ["postgres"] }
serde = "1.0.117"
serde_derive = "1.0.117"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]
